--- a/dashboard.html
+++ b/dashboard.html
@@ -142,7 +142,7 @@
             //  Replace this with your actual logout logic (e.g., redirect to login page)
             alert('Logging out...');
             localStorage.removeItem('userEmail'); // Remove email on logout
-            window.location.href = 'home.html'; //  Replace 'home.html' with your actual login page URL
+            window.location.href = 'index.html'; //  Replace 'home.html' with your actual login page URL
         }
 
         // Function to refresh the page
