--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
                     <input type="password" id="loginPassword" name="loginPassword" required>
                 </div>
                 <button type="button" id="loginBtn">Log In</button>
-                <p>Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
+                <p>If otp is not in your inbox kindly check spam folder also.Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
             </form>
         </div>
     </div>
