--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                     <button type="button" id="verifyOtpBtn">Create Account</button>
                 </div>
 
-                <p>Already have an account? <a href="#" id="loginLink">Log in</a></p>
+                <p>If otp is not in your inbox kindly check spam folder also.Already have an account? <a href="#" id="loginLink">Log in</a></p>
             </form>
         </div>
 
@@ -71,7 +71,7 @@
                     <input type="password" id="loginPassword" name="loginPassword" required>
                 </div>
                 <button type="button" id="loginBtn">Log In</button>
-                <p>If otp is not in your inbox kindly check spam folder also.Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
+                <p>Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
             </form>
         </div>
     </div>
