--- a/login.html
+++ b/login.html
@@ -70,6 +70,7 @@
                     <label for="loginPassword">Password:</label>
                     <input type="password" id="loginPassword" name="loginPassword" required>
                 </div>
+                <p><a href="#" id="forgotPasswordLink">Forgot Password?</a></p>
                 <button type="button" id="loginBtn">Log In</button>
                 <p>Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
             </form>
